--- a/fwp.tex
+++ b/fwp.tex
@@ -14,7 +14,7 @@
 	%% body start
 
 	\section{Objective}
-		\being{prop} \label{prop:1}
+		\begin{prop} \label{prop:1}
 			If a FWP and a weighted matrix are to play the same game of checkers with no training phase the FWP
 			will play more efficiently.
 		\end{prop}
