--- a/fwp.tex
+++ b/fwp.tex
@@ -3,6 +3,7 @@
 \usepackage{snow-preamble}
 
 \newtheorem{prop}{Proposition}
+\newtheorem{assume}{Assumption}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -12,43 +13,32 @@
 	\newpage
 
 	%% body start
+	\section{Introduction}
+		\mybody{intro}
 
 	\section{Objective}
-		\begin{prop} \label{prop:1}
-			If a FWP and a weighted matrix are to play the same game of checkers with no training phase the FWP
-			will play more efficiently.
-		\end{prop}
+		\mybody{objective}
 
-	% what is an FWP
-	\section{}
-
-	% how does it apply to graph theory
-	\section{}
-
-	% why are they usefull
 	\section{Literature Review}
+		\mybody{litreview}
 
-	% application
 	\section{Methods}
-		\subsection{American checkers rules} \label{sec:rules}
-			\begin{itemize}
-				\item played on a board perfectly latticed board
-				\item pieces can move forward unless capturing
-				\item to capture a piece must jump another piece (of opposite loyalty) diagonally forward
-				\item pieces that reach the opposite side promote to "kings"
-				\item "kings" can capture forward or backward
-			\end{itemize}
-		\subsection{Experiment states}
-			\indent The different iterations serve to symbolize different stages of internal development. I devise
-			the different stages by the amount of weakenings placed on the problem. We begin with a proposition
-			\ref{prop:1}, then create stages by applying weakenings to the problem such that proving these
-			weakened stages will bring us closer to proving our original proposition\footnote{Such is the format
-			for any complex direct proof}.
+		\mybody{methods}
 
+	\section{Results}
+		\textcolor{red}{Do not worry about this section for draft 1}
+		% \mybody{results}
+
+	\section{Conclusion}
+		\textcolor{red}{Do not worry about this section for draft 1}
+		% \mybody{conclusion}
+	
+	\section{Future Work}
+		\mybody{future}
 
 	%% body finish
 
-	\nocite{*}
+	% \nocite{*}
 
 	\newpage % bib
 	\backmatter
@@ -60,5 +50,6 @@
 
 	\newpage % appendices
 	\appendix
+		\section{Fine Grain Code Review}
 
 \end{document}
