this will have to do for a semi-final draft
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Evan Drake at 2023-11-13 10:31:28 -0800 
+%% Created for Evan Drake at 2023-12-06 16:17:11 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -86,9 +86,9 @@
 @online{church_-calculus_nodate,
 	author = {Church, Alonzo},
 	date-added = {2023-11-13 10:29:55 -0800},
-	date-modified = {2023-11-13 10:29:55 -0800},
+	date-modified = {2023-12-06 16:15:21 -0800},
 	file = {Snapshot:/Users/evandrake/Zotero/storage/DTH9IZJ9/supplementD.html:text/html},
-	title = {λ-Calculus and Type Theory},
+	title = {lambda-Calculus and Type Theory},
 	url = {https://plato.stanford.edu/entries/church/supplementD.html},
 	urldate = {2023-10-09},
 	bdsk-url-1 = {https://plato.stanford.edu/entries/church/supplementD.html}}
@@ -445,7 +445,7 @@
 
 @misc{miconi_backpropamine_2020,
 	abstract = {The impressive lifelong learning in animal brains is primarily enabled by plastic changes in synaptic connectivity. Importantly, these changes are not passive, but are actively controlled by neuromodulation, which is itself under the control of the brain. The resulting self-modifying abilities of the brain play an important role in learning and adaptation, and are a major basis for biological reinforcement learning. Here we show for the first time that artificial neural networks with such neuromodulated plasticity can be trained with gradient descent. Extending previous work on differentiable Hebbian plasticity, we propose a differentiable formulation for the neuromodulation of plasticity. We show that neuromodulated plasticity improves the performance of neural networks on both reinforcement learning and supervised learning tasks. In one task, neuromodulated plastic {LSTMs} with millions of parameters outperform standard {LSTMs} on a benchmark language modeling task (controlling for the number of parameters). We conclude that differentiable neuromodulation of plasticity offers a powerful new framework for training neural networks.},
-	annotation = {Miconi illustrates meta learning from a biological basis; examining their neuromodulative algorithm Backpropamine. An algorithm based on the meta learning of the human brain. The idea is taken from how humans learn; a human does not learn based on an immutable algorithm. Humans learn by mapping experience to action in a retro active manner. Miconi gives an algorithm for neuromodulation based on Hebbian plasticity; the weight of the  connection i{\textasciitilde}j determines the adaption potential of neurons i and j. Miconi's Backpropamine is based on utilizing gradient decent to optimize the hebbian plasticity of each neural connection as a function of time. This paper gives an approach to meta learning that is not derived from fast weighted matrices. The idea of retro active evaluation can be implemented to assist in implementing a Godel machines' proofing mechanism.},
+	annotation = {Miconi illustrates meta learning from a biological basis; examining their neuromodulative algorithm Backpropamine. An algorithm based on the meta learning of the human brain. The idea is taken from how humans learn; a human does not learn based on an immutable algorithm. Humans learn by mapping experience to action in a retro active manner. Miconi gives an algorithm for neuromodulation based on Hebbian plasticity; the weight of the connection i{\textasciitilde}j determines the adaption potential of neurons i and j. Miconi's Backpropamine is based on utilizing gradient decent to optimize the hebbian plasticity of each neural connection as a function of time. This paper gives an approach to meta learning that is not derived from fast weighted matrices. The idea of retro active evaluation can be implemented to assist in implementing a Godel machines' proofing mechanism.},
 	author = {Miconi, Thomas and Rawal, Aditya and Clune, Jeff and Stanley, Kenneth O.},
 	date = {2020-02-24},
 	date-added = {2023-11-13 10:29:55 -0800},
@@ -892,9 +892,9 @@
 
 @online{noauthor_alonzo_nodate,
 	date-added = {2023-11-13 10:29:55 -0800},
-	date-modified = {2023-11-13 10:29:55 -0800},
+	date-modified = {2023-12-06 16:17:10 -0800},
 	file = {Snapshot:/Users/evandrake/Zotero/storage/WWDTNAK2/supplementD.html:text/html},
-	title = {Alonzo Church {\textgreater} D. The λ-Calculus and Type Theory (Stanford Encyclopedia of Philosophy)},
+	title = {Alonzo Church {\textgreater} D. The $\Lambda$-Calculus and Type Theory (Stanford Encyclopedia of Philosophy)},
 	url = {https://plato.stanford.edu/entries/church/supplementD.html#D2ChurSimpTheoType},
 	urldate = {2023-10-09},
 	bdsk-url-1 = {https://plato.stanford.edu/entries/church/supplementD.html#D2ChurSimpTheoType}}
