--- a/fwp.tex
+++ b/fwp.tex
@@ -26,19 +26,17 @@
 		\mybody{methods}
 
 	\section{Results}
-		\textcolor{red}{Do not worry about this section for draft 1}
-		% \mybody{results}
+		\mybody{results}
 
 	\section{Conclusion}
-		\textcolor{red}{Do not worry about this section for draft 1}
-		% \mybody{conclusion}
+		\mybody{conclusion}
 	
 	\section{Future Work}
 		\mybody{future}
 
 	%% body finish
 
-	% \nocite{*}
+	\nocite{*}
 
 	\newpage % bib
 	\backmatter
@@ -49,7 +47,5 @@
 	\printindex
 
 	\newpage % appendices
-	\appendix
-		\section{Fine Grain Code Review}
 
 \end{document}
