added note to references
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/fwp.tex
+++ b/fwp.tex
@@ -41,6 +41,7 @@
 	\newpage % bib
 	\backmatter
 	\addcontentsline{toc}{section}{References}
+	\textcolor{red}{I thought it was only right to include my whole meta-learning section here as I believe they all added inspiration}
 	\printbibliography
 
 	\newpage % index
